apps/homepage/homepage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  selector:
    app: homepage
  type: ClusterIP
  ports:
    - name: http
      port: 3000
