apps/homepage/homepage-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ieeetamu.org`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
